Fixed issue with squashed list on mobile

--- a/style.css
+++ b/style.css
@@ -27,6 +27,10 @@ h2 {
   font-weight: bold;
   font-family: "Poppins", sans-serif;
 }
+.list-grid {
+  display: grid;
+  grid-template-columns: 350px auto;
+}
 .round-link {
   color: black;
   background-color: whitesmoke;
@@ -96,6 +100,9 @@ h2 {
   }
   .info-grid {
     width: 100%;
+  }
+  .list-grid {
+    grid-template-columns: auto;
   }
 }
 .img-grid {
